tests/errors/lifetime/loan/ref_transfer_preserves_loan_conflict.sim

        extern fn sink(r: &mut i64);
        fn f(a: i64) {
          r: &mut i64;
          s: &mut i64;
          entry:
            r = &mut a;
            s = move r;
            a = 1;
            call sink(move s);
            return
        }
        